@@ -5,28 +5,25 @@ import org.springframework.stereotype.Repository;
 
 import java.util.*;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Repository
 public class CaseRepository implements MemoryRepository {
 	
-	private final Map<String, Case> caseMap = new HashMap<String, Case>();
-	private final Function<Case, String> idGetter = (Case::returnCaseIdCopy);
+	private final Map<Integer, Case> caseMap = new HashMap<Integer, Case>();
+	private final Function<Case, Integer> idGetter = (Case::getId);
 	
 	@Override
-	public boolean save(Case entity) {
-	
-		caseMap.put(idGetter.apply(entity), entity);
-		return true;
+	public Case save(Case entity) {
+		return caseMap.put(idGetter.apply(entity), entity);
 	}
 	
 	@Override
-	public Case findOne(UUID id) {
+	public Case findOne(Integer id) {
 		return caseMap.get(id);
 	}
 	
 	@Override
-	public boolean exists(UUID id) {
+	public boolean exists(Integer id) {
 		return caseMap.containsKey(id);
 	}
 	
@@ -36,12 +33,12 @@ public class CaseRepository implements MemoryRepository {
 	}
 	
 	@Override
-	public Iterable<Case> findAll(Iterable<UUID> ids) {
-		final List<UUID> idList = new ArrayList<>();
+	public Iterable<Case> findAll(Iterable<Integer> ids) {
+		final List<Integer> idList = new ArrayList<>();
 		ids.forEach(idList::add);
 		return caseMap.values().stream()
-				.filter(item -> idList.contains(item.returnCaseIdCopy()))
-				.collect(Collectors.toList());
+				.filter(item -> idList.contains(item.getId()))
+				.toList();
 	}
 	
 	@Override
